stylus/sidebar.styl
.sidebar
  float: right
  margin-top: 50px
  position: relative
  width: SIDEBAR_WIDTH

  body.course &, body.notetype &, body.note &
    margin-top: -200px

  @media PHONE
    float: none
    margin-top: 0
    padding: 20px
    text-align: center
    width: 100%

  & > div:not(.ad)
    margin: 1.2em 0

  h1, h2, h3, h4
    font-family: BODY_FONT

  h3
    font-size: 19px
    font-weight: bold
    margin: 1em 0 1em 0


  //
  // COUNTDOWN
  //

  .countdown

    .time
      float: left
      width: 25%

      div
        font-size: 35px
        line-height: 1.1em
        margin: 0
        text-align: center
      span
        display: block
        font-size: 15px
        margin: 0
        text-align: center

    h3
      margin-top: 1em
      text-align: center
      text-transform: uppercase

      &.left-to-study
        font-weight: normal

